Make includes optional in JHarmonizerMemberGroup, alpha-sort Basic Object Methods, remove redundant includes
Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/b930bb9b-4e9b-45cf-8433-f191558df946

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>